--- a/02/fontSize.html
+++ b/02/fontSize.html
@@ -10,7 +10,13 @@
   <button id="plus">+</button>
 
   <script>
+    let num = 16;
+    const result = document.getElementById('result');
+    const plusBtn = document.getElementById('plus');
 
+    plusBtn.addEventListener('click', function () {
+      result.style.fontSize = `${num += 1}px`;
+    });
   </script>
 </body>
 </html>
