--- a/03_if/click.html
+++ b/03_if/click.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>クリックゲーム</title>
+  <style>
+    #monster {
+      transition: .5s;
+    }
+
+    .finish {
+      transform: rotate(720deg) scale(0);
+    }
+  </style>
 </head>
 <body>
   <img id="monster" src="https://trident.takagino.net/doc2024/javascript/assets/03/monster.png" alt="">
@@ -17,8 +26,13 @@
     hp.innerHTML = `HP:${count}`;
 
     monster.addEventListener('click', function () {
+      count -= 1;
+
       if (count > 0) {
-        hp.innerHTML = `HP:${count -= 1}`;
+        hp.innerHTML = `HP:${count}`;
+      } else if (count == 0) {
+        hp.innerHTML = `HP:${count}`;
+        monster.classList.add('finish');
       }
     });
   </script>
