--- a/04_switch/omikuji3.html
+++ b/04_switch/omikuji3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>おみくじその2</title>
+  <title>おみくじその3</title>
   <style>
     #result {
       transition: 1s;
@@ -18,6 +18,7 @@
   <button id="btn">占う</button>
   <p><img id="result" src="https://trident.takagino.net/doc2024/javascript/assets/04/omikuji/omikuji.png" alt="占う"></p>
   <p id="message">何か一言が表示されます。</p>
+  <ul id="count"></ul>
 
   <script>
     const btn = document.getElementById('btn');
@@ -25,33 +26,73 @@
     const message = document.getElementById('message');
     const path = 'https://trident.takagino.net/doc2024/javascript/assets/04/omikuji';
 
+    let daikichi = 0;
+    let chuukichi = 0;
+    let syoukichi = 0;
+    let kyou = 0;
+    let daikyou = 0;
+
+    const count = document.getElementById('count');
+    count.innerHTML = `<li>大吉：${daikichi}</li>
+                        <li>中吉：${chuukichi}</li>
+                        <li>小吉：${syoukichi}</li>
+                        <li>凶：${kyou}</li>
+                        <li>大凶：${daikyou}</li>`;
+
     btn.addEventListener('click', function () {
-      const num = Math.floor(Math.random() * 5);
+      const num = Math.floor(Math.random() * 10);
 
       switch (num) {
+        //大吉の場合
         case 0:
           result.setAttribute('src', `${path}/daikichi.png`);
-          message.innerHTML = '買ってないのに宝くじが当たる';
+          daikichi += 1;
+
+          //出た回数によってコメントを変える
+          switch (daikichi) {
+            case 1:
+              message.innerHTML = '1回目';
+              break;
+            case 2:
+              message.innerHTML = '2回目';
+              break;
+            default:
+              message.innerHTML = 'それ以上';
+              break;
+          }
           break;
 
+        //中吉の場合
         case 1:
+        case 2:
           result.setAttribute('src', `${path}/chuukichi.png`);
           message.innerHTML = '何もしてないのに褒められる';
+          chuukichi += 1;
           break;
 
-        case 2:
+        //小吉の場合
+        case 3:
+        case 4:
+        case 5:
+        case 6:
           result.setAttribute('src', `${path}/syoukichi.png`);
           message.innerHTML = '頭皮の調子が良い';
+          syoukichi += 1;
           break;
 
-        case 3:
+        //凶の場合
+        case 7:
+        case 8:
           result.setAttribute('src', `${path}/kyou.png`);
           message.innerHTML = 'コンタクトレンズが割れる';
+          kyou += 1;
           break;
 
-        case 4:
+        //大凶の場合
+        case 9:
           result.setAttribute('src', `${path}/daikyou.png`);
           message.innerHTML = 'どこかの骨を折る';
+          daikyou += 1;
           break;
 
         default:
@@ -60,6 +101,12 @@
       }
 
       result.classList.toggle('active');
+
+      count.innerHTML = `<li>大吉：${daikichi}</li>
+                        <li>中吉：${chuukichi}</li>
+                        <li>小吉：${syoukichi}</li>
+                        <li>凶：${kyou}</li>
+                        <li>大凶：${daikyou}</li>`;
     });
   </script>
 </body>
