--- a/07_practice/plus.html
+++ b/07_practice/plus.html
@@ -3,48 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>変数の復習問題</title>
-    <style>
-      #btn {
-        position: fixed;
-        top: 20px;
-        right: 20px;
-        z-index: 9999;
-      }
-
-      #menu {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        padding: 50px 0;
-        background-color: #333;
-        color: #fff;
-        text-align: center;
-        z-index: 9998;
-        transition: 0.5s;
-        transform: translateY(-100%);
-      }
-
-      #menu.open {
-        transform: translateY(0);
-      }
-
-      #menu ul {
-        padding-left: 0;
-        list-style: none;
-      }
-    </style>
+    <title>Document</title>
   </head>
   <body>
-    <button id="btn">メニュー</button>
-    <div id="menu">
-      <ul>
-        <li>HOME</li>
-        <li>ABOUT</li>
-        <li>CONTACT</li>
-      </ul>
-    </div>
-    <script></script>
+    <p id="result">0</p>
+    <button id="plus">+</button>
+
+    <script>
+      let num = 0;
+      const result = document.querySelector("#result");
+      const plusBtn = document.querySelector("#plus");
+
+      plusBtn.addEventListener("click", function () {
+        num = num + 1;
+        result.innerHTML = num;
+      });
+    </script>
   </body>
 </html>
